# tessViewer

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  tessViewer.sln
data/data/model/: box2x.sdmj  box2y.sdmj  box2z.sdmj  cube.sdmj  cube_uv.sdmj  logicool_sp.sdmj  test1.sdmj
data/data/shader/: default_font.vert
data/model/: Suzanne.sdmj  Teapot1.sdmj  box1.sdmj  tile.sdmj  transform2.sdmj
data/shader/: default.frag  default.vert  default_font.frag
script/: flags_to_commands.py  flags_to_db.py
setup/: setup.vdproj
tessViewer/: CMakeLists.txt  Setting.cpp  Setting.h  ShaderManager.cpp  ShaderManager.h  app.cpp  app.h  camera.cpp  camera.h  define.h  exception.cpp  exception.h  glQuery.cpp  glQuery.h  glShaderVariable.cpp  glShaderVariable.h  glslProgram.cpp  glslProgram.h  glslStringDraw.cpp  glslStringDraw.h  location_define.h  log.cpp  log.h  main.cpp  material.cpp  material.h  model.cpp  model.h  osd_info.cpp  osd_info.h  pch.h  tessViewer.vcxproj  tessViewer.vcxproj.filters  version.h  version.h.in  計画.txt
tessViewer/data/model/: Suzanne2.sdmj  transform.sdmj
tessViewer/data/shader/: common.glsl  default.geom  gen.frag  gen.geom  gen.tesc  gen.tese  gen.vert
tessViewer/doc/: ClassDiagram1.cd
tessViewer/doc/schemas/: cpp_header_gen.py  setting_schema.json  setting_schema.json.gen.h
tessViewer/glapp/: base_window.cpp  base_window.h  config.cpp  config.h  glShaderProgram.cpp  glShaderProgram.h  glapp.cpp  glapp.hpp  glapp_define.h  glm_conversion.h  glslOSDprogram.cpp  glslOSDprogram.h  glslprogram.cpp  glslprogram.h  glslshader.cpp  glslshader.h  glslshader_mamager.cpp  glslshader_manager.h  material.cpp  material.h  mesh.cpp  mesh.h  model.cpp  model.h  node.h  osd_program.cpp  osd_program.h  phongMaterial.cpp  phongMaterial.h  query.cpp  query.h  shader_manager.cpp  shader_manager.h  shader_object.cpp  shader_object.h  shader_program.cpp  shader_program.h  transform.cpp  transform.h  useConfig.h
